@@ -1,6 +1,7 @@
 package ru.yandex.practicum;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class UniversityExample {
 
@@ -25,12 +26,15 @@ public class UniversityExample {
         students.add(new Student("Сергеев", "Дмитрий", "iamdmitry@gmail.com", 2021));
 
         List<Student> graduatedStudents = students.stream()
-                .filter(student -> examPassedNames.contains(student.surname + student.name)) // Проверка, что студент успешно сдал экзамен
+                .filter(student -> {
+                    return examPassedNames.contains(student.surname + " " + student.name);
+                })// Проверка, что студент успешно сдал экзамен
                 .map(student -> {
-                    student.groupName = groupNames.get(student.entranceYear); // Заполнение названия группы студента
+                    student.groupName = groupNames.get(student.entranceYear);
                     return student;
                 })
-                .peek(student -> graduatesClub.add(student.email)).toList();
+                .peek(student -> graduatesClub.add(student.email))
+                .collect(Collectors.toList());
 
         for (Student student : graduatedStudents) {
             System.out.println(student);
